[gd_scene load_steps=14 format=3 uid="uid://yyiwa3331bu0"]

[ext_resource type="Theme" uid="uid://bhc7mnvblc0xa" path="res://theme.tres" id="1_xk6ql"]
[ext_resource type="Script" path="res://friends/friends.gd" id="2_8v808"]
[ext_resource type="Texture2D" uid="uid://cs3t7l2jcno3v" path="res://textures/avatar.png" id="2_p7hod"]
[ext_resource type="Script" path="res://grid_auto_size.gd" id="3_etyrx"]
[ext_resource type="Texture2D" uid="uid://be68r2rb4a644" path="res://textures/search.png" id="4_b63sq"]
[ext_resource type="Texture2D" uid="uid://dbolp6d4kdsnm" path="res://textures/add_friend.png" id="5_fs64a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxuov"]
bg_color = Color(0.109804, 0.113725, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnuyt"]
bg_color = Color(0.192157, 0.207843, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqw04"]
bg_color = Color(0.231373, 0.25098, 0.286275, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qu021"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v86px"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b60dt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o61ty"]
bg_color = Color(0.231373, 0.239216, 0.254902, 1)

[node name="Friends" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xk6ql")
script = ExtResource("2_8v808")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nxuov")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Profile" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Profile"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jnuyt")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ProfileIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource("2_p7hod")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Profile"]
layout_mode = 2
theme_override_constants/separation = -2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer2"]
layout_mode = 2

[node name="ProfileName" type="Label" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.411765, 0.784314, 0.952941, 1)
theme_override_font_sizes/font_size = 14
text = "PROFILE NAME"

[node name="Staus" type="Label" parent="MarginContainer/VBoxContainer/Profile/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.411765, 0.784314, 0.952941, 1)
theme_override_font_sizes/font_size = 12
text = "Online"

[node name="Favorites" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2
columns = 4
script = ExtResource("3_etyrx")

[node name="Friend1" type="TextureButton" parent="MarginContainer/VBoxContainer/Favorites"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_p7hod")
ignore_texture_size = true
stretch_mode = 0

[node name="Friend2" type="TextureButton" parent="MarginContainer/VBoxContainer/Favorites"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_p7hod")
ignore_texture_size = true
stretch_mode = 0

[node name="Friend3" type="TextureButton" parent="MarginContainer/VBoxContainer/Favorites"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_p7hod")
ignore_texture_size = true
stretch_mode = 0

[node name="Friend4" type="TextureButton" parent="MarginContainer/VBoxContainer/Favorites"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_p7hod")
ignore_texture_size = true
stretch_mode = 0

[node name="SearchBar" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/SearchBar"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sqw04")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SearchBar"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SearchBar/MarginContainer"]
layout_mode = 2

[node name="FriendsSearch" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.686275, 0.772549, 0.811765, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_qu021")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_v86px")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b60dt")
placeholder_text = "FRIENDS"
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SearchBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SearchButton" type="TextureButton" parent="MarginContainer/VBoxContainer/SearchBar/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_b63sq")
texture_pressed = ExtResource("4_b63sq")
texture_hover = ExtResource("4_b63sq")
texture_disabled = ExtResource("4_b63sq")
ignore_texture_size = true
stretch_mode = 0

[node name="AddFriendButton" type="TextureButton" parent="MarginContainer/VBoxContainer/SearchBar/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_fs64a")
texture_pressed = ExtResource("5_fs64a")
texture_hover = ExtResource("5_fs64a")
texture_disabled = ExtResource("5_fs64a")
ignore_texture_size = true
stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InGameBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox"]
layout_mode = 2

[node name="InGameLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.654902, 0.721569, 0.717647, 1)
theme_override_font_sizes/font_size = 12
text = "- In Game"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox/VBoxContainer"]
layout_mode = 2

[node name="InGameBox" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="InGame" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox/VBoxContainer/MarginContainer/InGameBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Seperator" type="Panel" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o61ty")

[node name="OnlineBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox"]
layout_mode = 2

[node name="OnlineLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.654902, 0.721569, 0.717647, 1)
theme_override_font_sizes/font_size = 12
text = "- Online Friends"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer"]
layout_mode = 2

[node name="OnlineBox" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="OnlineList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/MarginContainer/OnlineBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Online" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/MarginContainer/OnlineBox/OnlineList"]
unique_name_in_owner = true
layout_mode = 2

[node name="Away" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/MarginContainer/OnlineBox/OnlineList"]
unique_name_in_owner = true
layout_mode = 2

[node name="Busy" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/MarginContainer/OnlineBox/OnlineList"]
unique_name_in_owner = true
layout_mode = 2

[node name="Snooze" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/MarginContainer/OnlineBox/OnlineList"]
unique_name_in_owner = true
layout_mode = 2

[node name="Seperator" type="Panel" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o61ty")

[node name="OfflineBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OfflineBox"]
layout_mode = 2

[node name="OfflineLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OfflineBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.654902, 0.721569, 0.717647, 1)
theme_override_font_sizes/font_size = 12
text = "- Offline"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OfflineBox/VBoxContainer"]
layout_mode = 2

[node name="OfflineBox" type="Control" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OfflineBox/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="Offline" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OfflineBox/VBoxContainer/MarginContainer/OfflineBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/InGameBox/VBoxContainer/InGameLabel" to="." method="_on_in_game_label_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OnlineBox/VBoxContainer/OnlineLabel" to="." method="_on_online_label_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/OfflineBox/VBoxContainer/OfflineLabel" to="." method="_on_offline_label_gui_input"]
